<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#55acee"
                android:gravity="center"
                android:padding="8dp">

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_android"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginRight="10dp"
                    android:padding="10dp"
                    app:fb_defaultColor="#3d71ff"
                    app:fb_focusColor="#8a8a8a"
                    app:fb_iconPaddingLeft="0dp"
                    app:fb_iconPaddingRight="0dp"
                    app:fb_iconResource="@mipmap/qq"
                    app:fb_radius="56dp"
                    app:fb_textColor="#FFFFFF" />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_dropbox"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginRight="10dp"
                    android:padding="10dp"
                    app:fb_defaultColor="@color/white"
                    app:fb_focusColor="#313131"
                    app:fb_iconPaddingLeft="0dp"
                    app:fb_iconPaddingRight="0dp"
                    app:fb_iconResource="@mipmap/q_zone"
                    app:fb_radius="56dp" />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginRight="10dp"
                    android:padding="10dp"
                    app:fb_defaultColor="#7ab800"
                    app:fb_focusColor="#9bd823"
                    app:fb_iconPaddingLeft="0dp"
                    app:fb_iconPaddingRight="0dp"
                    app:fb_iconResource="@mipmap/q_blog"
                    app:fb_radius="56dp"
                    app:fb_textColor="#FFFFFF" />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_marginRight="10dp"
                    android:padding="10dp"
                    app:fb_defaultColor="#f0f100"
                    app:fb_focusColor="#313131"
                    app:fb_iconPaddingLeft="0dp"
                    app:fb_iconPaddingRight="0dp"
                    app:fb_iconResource="@mipmap/q_video"
                    app:fb_radius="56dp" />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:padding="10dp"
                    app:fb_defaultColor="#7ed862"
                    app:fb_focusColor="#2e5071"
                    app:fb_iconPaddingLeft="0dp"
                    app:fb_iconPaddingRight="0dp"
                    app:fb_iconResource="@mipmap/q_weiyun"
                    app:fb_radius="56dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/section_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#3b5998"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="20dp">

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_facebook_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    app:fb_borderColor="#FFFFFF"
                    app:fb_borderWidth="1dp"
                    app:fb_defaultColor="#3b5998"
                    app:fb_focusColor="#5577bd"
                    app:fb_fontIconResource="@string/icon_like"
                    app:fb_fontIconSize="15sp"
                    app:fb_iconPosition="right"
                    app:fb_radius="30dp"
                    app:fb_text="Like my facebook page"
                    app:fb_textColor="#FFFFFF" />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_facebook_share"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    app:fb_borderColor="#FFFFFF"
                    app:fb_borderWidth="1dp"
                    app:fb_defaultColor="#3b5998"
                    app:fb_focusColor="#5577bd"
                    app:fb_fontIconResource="@string/icon_share"
                    app:fb_fontIconSize="25sp"
                    app:fb_iconPaddingLeft="20dp"
                    app:fb_iconPaddingRight="0dp"
                    app:fb_iconPosition="right"
                    app:fb_radius="20dp"
                    app:fb_text="Share the link"
                    app:fb_textColor="#FFFFFF" />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_facebook_follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:padding="10dp"
                    app:fb_borderColor="#FFFFFF"
                    app:fb_borderWidth="1dp"
                    app:fb_defaultColor="#3b5998"
                    app:fb_focusColor="#5577bd"
                    app:fb_fontIconResource="@string/icon_follow"
                    app:fb_fontIconSize="25sp"
                    app:fb_iconPosition="right"
                    app:fb_radius="16dp"
                    app:fb_text="Follow Mehdi Sakout"
                    app:fb_textColor="#FFFFFF" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ff5f69"
                android:gravity="center"
                android:paddingBottom="30dp"
                android:paddingTop="30dp">

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_create_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:padding="10dp"
                    app:fb_borderColor="#FFFFFF"
                    app:fb_borderWidth="1dp"
                    app:fb_defaultColor="#ff5f69"
                    app:fb_focusColor="#ff838b"
                    app:fb_radius="30dp"
                    app:fb_text="Create an account"
                    app:fb_textColor="#FFFFFF"></mehdi.sakout.fancybuttons.FancyButton>

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    app:fb_borderColor="#FFFFFF"
                    app:fb_borderWidth="1dp"
                    app:fb_defaultColor="#ff5f69"
                    app:fb_focusColor="#ff838b"
                    app:fb_fontIconResource="@string/icon_user"
                    app:fb_iconPosition="left"
                    app:fb_radius="30dp"
                    app:fb_text="Login"
                    app:fb_textColor="#FFFFFF" />

            </LinearLayout>

            <com.fenjuly.library.ArrowDownloadButton
                android:id="@+id/arrow_download_button"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="16dp"
                android:background="#1c9cf2" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
                    